# Synthetic-Datasets-Renderer

./: CMakeLists.txt
Dependencies/custom/include/learnopengl/: camera.h  mesh.h  model.h  shader_s.h
Dependencies/cwd/include/cwd/: cwd.cpp
Dependencies/glad/include/glad/: glad.c  glad.h
Dependencies/stb_image/include/stb_image/: stb_image.h
Shader/: pbr_fragment.glsl  pbr_vertex.glsl  pyramid_vertex.glsl
src/: main.cpp
